--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,9 +30,10 @@ jobs:
       - name: Build with Maven
         run: mvn clean verify --file pom.xml
       - uses: deblockt/cucumber-report-annotations-action@v1.7
-  with:
-    access-token: ${{ secrets.GITHUB_TOKEN }}
-    path: "**/cucumber-report.json"
+      - uses: deblockt/cucumber-report-annotations-action@v1.7
+        with:
+          access-token: ${{ secrets.GITHUB_TOKEN }}
+          path: "**/cucumber-report.json"
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
